--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 $('#head').css('background-color',"dimgrey");
                 $('#memo').css('background-color',"dimgrey");
                 $('.button_color').css('background-color',"dimgrey");
-                $('#change').css('background-color',"#3c3c3c");
+                $('#change').css('background-color',"dimgrey");
             }
         }
     </script>
@@ -121,4 +121,3 @@
 
 
 </html>
-
