--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             } else {
                 tableData += '<table class="main_todo" class="main_todo">';
                 tableData += '<tr>';
-                tableData += '<td>';
-                tableData += '<strong>' + head + '<br>' + '</strong>' + memo;
-                tableData += '<td>';
+                tableData += '<td class ="table_color">';
+                tableData += '<strong>' + head + '<br>' + '</strong>' + memo ;
+                tableData += '<td class = "table_color">';
+                tableData +=  '<button onclick="clearTable()" class ="del_button">X</button>';
                 tableData += '<tr>';
                 tableData += '</table>';
                 $('.main').append(tableData);
@@ -33,11 +34,17 @@
         }
 
         function clearTable() { //가장 최근에 만든 테이블을 없애는 함수 
-            $('.main_todo:last').remove();
+            $('.del_button').click(
+                function (){
+                    $(this).parent().parent().parent().parent().remove();//버튼의 부모의부모의부모의부모를 삭제 : 테이블 자체를 삭제한다는 뜻~
+                }
+            )
+            //$('br').remove();
         }
 
         function clearAllTable() { //모든 테이블을 없애는 테이블 
             $('.main_todo').remove();
+            //$('br').remove();
         }
         flag = -1; //-1일시 다크모드,1일시 라이트모드 
         function change_mode() {
@@ -47,7 +54,6 @@
                 $('.sideView').css("background-color", "#F0FFFF");
                 $('#headLine').css('background-color', "#ffc861");
                 $('body').css("background-color", "#ffc861");
-                $('.main_todo').css("background-color","#ffffff")
                 $('#chat').css('background-color', "#ffc861");
                 $('.frame').css('background-color', "#ffc861");
                 $('#title_memo').css('color', "black");
@@ -55,19 +61,22 @@
                 $('#memo').css('background-color',"#fff28c");
                 $('.button_color').css('background-color',"#fff28c");
                 $('#change').css('background-color',"#F0F8FF");
+                $('.del_button').css('background-color',"white");
+                $('table_color').css("background-color","white");
             } else { //다크모드
                 $('.main').css("background-color", "#3c3c3c");
                 $('.sideView').css("background-color", "#3c3c3c");
                 $('#headLine').css("background-color", "dimgray");
                 $('#chat').css("background-color", "dimgray");
                 $('body').css("background-color", "dimgray");
-                $('.main_todo').css("background-color","#8a8a8a");
                 $('.frame').css('background-color', "dimgrey");
                 $('#title_memo').css('color', "white");
                 $('#head').css('background-color',"dimgrey");
                 $('#memo').css('background-color',"dimgrey");
                 $('.button_color').css('background-color',"dimgrey");
                 $('#change').css('background-color',"dimgrey");
+                $('.del_button').css('background-color',"dimgrey");
+                $('table_color').css("background-color","3c3c3c");
             }
         }
     </script>
@@ -94,7 +103,6 @@
                     <textarea name="" id="memo" cols="40" rows="40" class="noresize"
                         placeholder="내용을 입력하세요"></textarea><br>
                     <button onclick="addTable()" class="button_color">To Do List 추가하기</button>
-                    <button onclick="clearTable()" class="button_color">CLear</button>
                     <button onclick="clearAllTable()" class="button_color">Clear All</button>
             </tr>
         </tbody>
