--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <html>
 
 <head>
@@ -5,7 +7,7 @@
     <link rel="stylesheet" href="./main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>
-        function addTable() { //테이블을 만드는 함수 
+        function addTable() { //테이블을 만드는 함수
             var cnt = 1;
             var head = document.getElementById('head').value;
             var memo = document.getElementById('memo').value;
@@ -33,7 +35,7 @@
 
         }
 
-        function clearTable() { //가장 최근에 만든 테이블을 없애는 함수 
+        function clearTable() { //가장 최근에 만든 테이블을 없애는 함수
             $('.del_button').click(
                 function (){
                     $(this).parent().parent().parent().parent().remove();//버튼의 부모의부모의부모의부모를 삭제 : 테이블 자체를 삭제한다는 뜻~
@@ -42,11 +44,11 @@
             //$('br').remove();
         }
 
-        function clearAllTable() { //모든 테이블을 없애는 테이블 
+        function clearAllTable() { //모든 테이블을 없애는 테이블
             $('.main_todo').remove();
             //$('br').remove();
         }
-        flag = -1; //-1일시 다크모드,1일시 라이트모드 
+        flag = -1; //-1일시 다크모드,1일시 라이트모드
         function change_mode() {
             flag = flag * -1;
             if (flag == 1) { //화이트 모드
@@ -62,7 +64,11 @@
                 $('.button_color').css('background-color',"#fff28c");
                 $('#change').css('background-color',"#F0F8FF");
                 $('.del_button').css('background-color',"white");
-                $('table_color').css("background-color","white");
+                $('.table_color').css("background-color","3c3c3c");
+                $('.main_todo').css('background-color',"3c3c3c");
+                $('.main_todo').css('color',"white");
+
+
             } else { //다크모드
                 $('.main').css("background-color", "#3c3c3c");
                 $('.sideView').css("background-color", "#3c3c3c");
@@ -76,7 +82,10 @@
                 $('.button_color').css('background-color',"dimgrey");
                 $('#change').css('background-color',"dimgrey");
                 $('.del_button').css('background-color',"dimgrey");
-                $('table_color').css("background-color","3c3c3c");
+                $('.table_color').css("background-color","white");
+                $('.main_todo').css('background-color',"white");
+                $('.main_todo').css('color',"black");
+
             }
         }
     </script>
