--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 $('.button_color').css('background-color',"#fff28c");
                 $('#change').css('background-color',"#F0F8FF");
                 $('.del_button').css('background-color',"white");
-                $('.table_color').css("background-color","3c3c3c");
-                $('.main_todo').css('background-color',"3c3c3c");
-                $('.main_todo').css('color',"white");
+                $('.table_color').css("background-color","white");
+                $('.main_todo').css('background-color',"white");
+                $('.main_todo').css('color',"black");
 
 
             } else { //다크모드
@@ -82,9 +82,9 @@
                 $('.button_color').css('background-color',"dimgrey");
                 $('#change').css('background-color',"dimgrey");
                 $('.del_button').css('background-color',"dimgrey");
-                $('.table_color').css("background-color","white");
-                $('.main_todo').css('background-color',"white");
-                $('.main_todo').css('color',"black");
+                $('.table_color').css("background-color","dimgray");
+                $('.main_todo').css('background-color',"dimgray");
+                $('.main_todo').css('color',"white");
 
             }
         }
