--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <html>
 
 <head>
@@ -7,41 +5,6 @@
     <link rel="stylesheet" href="./main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>
-    flag = -1; //-1일시 다크모드,1일시 라이트모드
-    function change_mode() {
-        flag = flag * -1;
-        if (flag == 1) { //화이트 모드
-            $('.main').css("background-color", "#F0F8FF");
-            $('.sideView').css("background-color", "#F0FFFF");
-            $('#headLine').css('background-color', "#ffc861");
-            $('body').css("background-color", "#ffc861");
-            $('#chat').css('background-color', "#ffc861");
-            $('.frame').css('background-color', "#ffc861");
-            $('#title_memo').css('color', "black");
-            $('#head').css('background-color',"fff28c");
-            $('#memo').css('background-color',"#fff28c");
-            $('.button_color').css('background-color',"#fff28c");
-            $('#change').css('background-color',"#F0F8FF");
-
-
-
-        } else { //다크모드
-            $('.main').css("background-color", "#3c3c3c");
-            $('.sideView').css("background-color", "#3c3c3c");
-            $('#headLine').css("background-color", "dimgray");
-            $('#chat').css("background-color", "dimgray");
-            $('body').css("background-color", "dimgray");
-            $('.frame').css('background-color', "dimgrey");
-            $('#title_memo').css('color', "white");
-            $('#head').css('background-color',"dimgrey");
-            $('#memo').css('background-color',"dimgrey");
-            $('.button_color').css('background-color',"dimgrey");
-            $('#change').css('background-color',"dimgrey");
-
-
-
-        }
-    }
         function addTable() { //테이블을 만드는 함수
             var cnt = 1;
             var head = document.getElementById('head').value;
@@ -49,7 +12,7 @@
             var tableData = '';
             if (head == '' && memo == '') {
                 alert('제목과 내용을 입력해 주세요');
-                return ;
+                return;
             } else if (head == '') {
                 alert('제목을 입력해 주세요');
                 return;
@@ -60,9 +23,9 @@
                 tableData += '<table class="main_todo" class="main_todo">';
                 tableData += '<tr>';
                 tableData += '<td class ="table_color">';
-                tableData += '<strong>' + head + '<br>' + '</strong>' + memo ;
+                tableData += '<strong>' + head + '<br>' + '</strong>' + memo;
                 tableData += '<td class = "table_color">';
-                tableData +=  '<button onclick="clearTable()" class ="del_button">X</button>';
+                tableData += '<button onclick="clearTable()" class ="del_button">X</button>';
                 tableData += '<tr>';
                 tableData += '</table>';
                 $('.main').append(tableData);
@@ -72,8 +35,8 @@
 
         function clearTable() { //가장 최근에 만든 테이블을 없애는 함수
             $('.del_button').click(
-                function (){
-                    $(this).parent().parent().parent().parent().remove();//버튼의 부모의부모의부모의부모를 삭제 : 테이블 자체를 삭제한다는 뜻~
+                function () {
+                    $(this).parent().parent().parent().parent().remove(); //버튼의 부모의부모의부모의부모를 삭제 : 테이블 자체를 삭제한다는 뜻~
                 }
             )
             //$('br').remove();
@@ -82,6 +45,46 @@
         function clearAllTable() { //모든 테이블을 없애는 테이블
             $('.main_todo').remove();
             //$('br').remove();
+        }
+        flag = -1; //-1일시 다크모드,1일시 라이트모드
+        function change_mode() {
+            flag = flag * -1;
+            if (flag == 1) { //화이트 모드
+                $('.main').css("background-color", "#F0F8FF");
+                $('.sideView').css("background-color", "#F0FFFF");
+                $('#headLine').css('background-color', "#ffc861");
+                $('body').css("background-color", "#ffc861");
+                $('#chat').css('background-color', "#ffc861");
+                $('.frame').css('background-color', "#ffc861");
+                $('#title_memo').css('color', "black");
+                $('#head').css('background-color', "fff28c");
+                $('#memo').css('background-color', "#fff28c");
+                $('.button_color').css('background-color', "#fff28c");
+                $('#change').css('background-color', "#F0F8FF");
+                $('.del_button').css('background-color', "white");
+                $('.table_color').css("background-color", "white");
+                $('.main_todo').css('background-color', "white");
+                $('.main_todo').css('color', "black");
+
+
+            } else { //다크모드
+                $('.main').css("background-color", "#3c3c3c");
+                $('.sideView').css("background-color", "#3c3c3c");
+                $('#headLine').css("background-color", "dimgray");
+                $('#chat').css("background-color", "dimgray");
+                $('body').css("background-color", "dimgray");
+                $('.frame').css('background-color', "dimgrey");
+                $('#title_memo').css('color', "white");
+                $('#head').css('background-color', "dimgrey");
+                $('#memo').css('background-color', "dimgrey");
+                $('.button_color').css('background-color', "dimgrey");
+                $('#change').css('background-color', "dimgrey");
+                $('.del_button').css('background-color', "dimgrey");
+                $('.table_color').css("background-color", "dimgray");
+                $('.main_todo').css('background-color', "dimgray");
+                $('.main_todo').css('color', "white");
+
+            }
         }
     </script>
 </head>
@@ -121,7 +124,8 @@
                             target="_blank"><img src="깃허브.jpg" class="img" alt="임재현"></a></a><br>
                     조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
                             src="facebook.jpg" alt="" class="img"><a href="https://github.com/toswm128"
-                            target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a>
+                            target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a><br>
+                    도움말 : <a href="help.html"><img src="help.png" id="help"></a>
 
             </tr>
         </tfoot>
