--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
             <tr>
                 <td id="chat" colspan="5" align="center">
                     <p>Maker</p>홍준혁 : <a href="https://www.facebook.com/programmingHong/" target="_blank"><img
-                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/milky1234"
+                            src="facebook.png" alt="" class="img"><a href="https://github.com/milky1234"
                             target="_blank"><img src="깃허브.jpg" class="img" alt="홍준혁"></a></a><br>
                     임재현 : <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img
-                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/limjh0513"
+                            src="facebook.png" alt="" class="img"><a href="https://github.com/limjh0513"
                             target="_blank"><img src="깃허브.jpg" class="img" alt="임재현"></a></a><br>
                     조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
-                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/toswm128"
+                            src="facebook.png" alt="" class="img"><a href="https://github.com/toswm128"
                             target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a><br>
                     도움말 : <a href="help.html"><img src="help.png" id="help"></a>
 
