--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 $('#head').css('background-color', "dimgrey");
                 $('#memo').css('background-color', "dimgrey");
                 $('.button_color').css('background-color', "dimgrey");
-                $('#change').css('background-color', "dimgrey");
+                $('#change').css('background-color', "#ebebeb");
                 $('.del_button').css('background-color', "dimgrey");
                 $('.table_color').css("background-color", "dimgray");
                 $('.main_todo').css('background-color', "dimgray");
@@ -130,10 +130,9 @@
             </tr>
         </tfoot>
     </table>
-    <button onclick="change_mode()" id="change">색 모드 변경</button>
+    <button onclick="change_mode()" id="change"><strong>색 모드 변경</strong></button>
     Organization Github:<a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt=""
             class="img"></a>
 </body>
-
 
 </html>
