--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
                             src="facebook.png" alt="" class="img"><a href="https://github.com/toswm128"
                             target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a><br>
-                    도움말 : <a href="help.html"><img src="help.png" id="help"></a>
+                    도움말 : <a href="help.html" target="_blank"><img src="help.png" id="help"></a>
 
             </tr>
         </tfoot>
