--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <table class="frame">
         <thead>
             <tr>
-                <td id="headLine" colspan="5" align="center"><strong>📝To Do List📝</strong></td>
+                <td id="headLine" colspan="5" align="center"><a href="https://honglim001.github.io/html-project1/index.html" title="TO Do List 리셋."><strong>📝To Do List📝</strong></a></td>
             </tr>
         </thead>
 
