--- a/help.html
+++ b/help.html
@@ -12,6 +12,7 @@
 <body>
     <strong style="font-size: 80px;">To Do List사용법</strong>
     <ul>
+        <li style="font-size: 50px;">To Do List를 클릭하면 초기화 됩니다.</li>
         <li style="font-size: 50px;">제목과 내용을 입력하고 ToDoList생성을 누르면 main화면에 표시가 됩니다.</li>
         <li style="font-size: 50px;">x버튼을 누르면 삭제가 됩니다</li>
         <li style="font-size: 50px;">라이트모드와 다크모드가 있습니다.</li>
